--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^3.0.7"
+  },
+  "dependencies": {
+    "electron-clipboard-watcher": "^1.0.1"
   }
 }
