--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tsa-software-2018-2019",
   "version": "1.0.0",
   "description": "A nifty clipboard history manager",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
